--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grapheme-splitter",
+  "name": "@captemulation/grapheme-splitter",
   "version": "1.0.0",
   "description": "A JavaScipt library that breaks strings into their individual user-perceived characters. It supports emojis!",
   "homepage": "https://github.com/orling/grapheme-splitter",
